--- a/template.ipynb
+++ b/template.ipynb
@@ -6,7 +6,7 @@
       "name": "Intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMTUyl+2verP0HGztOa8bHL",
+      "authorship_tag": "ABX9TyO/oVTvm6HjARkdZQ4tee3d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ktOJrju4E1LR",
-        "outputId": "87cde08d-0bbb-4d00-cd3c-602f5d59fa79"
+        "outputId": "25725a53-7441-4cbd-a63b-f5331a478aff"
       },
       "source": [
         "print(\"Hello world\")"
@@ -43,6 +43,29 @@
           "output_type": "stream",
           "text": [
             "Hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F5aoh9Q_LZgQ",
+        "outputId": "0be4c8e2-eb5a-4f84-dec3-e0ab1487ebff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"Hello Colab\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello Colab\n"
           ],
           "name": "stdout"
         }
